# MXVM

./: .gitignore  CMakeLists.txt  Doxyfile  README.html  README.md  about.html  doxygen-custom.css  mainpage.md  mxvm_env.sh
docs/: index.html  instructions.html  sdl.html  standard.html
include/mxvm/: ast.hpp  function.hpp  html_gen.hpp  icode.hpp  instruct.hpp  mxvm.hpp  parser.hpp  valid.hpp  version_info.hpp
modules/io/: CMakeLists.txt  io.c  io.cpp  io.mxvm
modules/sdl/: CMakeLists.txt  mx_sdl.h  sdl.c  sdl.cpp  sdl.mxvm
modules/std/: CMakeLists.txt  mx_std.h  std.c  std.cpp  std.mxvm
modules/string/: CMakeLists.txt  cstring.c  string.c  string.cpp  string.mxvm
mxvm_src/: Hello.html  Hello.mxvm  Makefile  ReadFile.mxvm  StringMain.html  StringPrint.html  StringPrint.mxvm  add.mxvm  addnumbers.mxvm  bits.mxvm  call_inf.mxvm  count_lines.mxvm  debug_info.txt  demo.mxvm  fibonacci.mxvm  file.mxvm  hello.mxvm  hello_world.mxvm  inf.mxvm  isprime.mxvm  length.mxvm  logic.mxvm  loop.mxvm  loopbyx.mxvm  print_cat.mxvm  print_string.mxvm  saveint.mxvm  stack.mxvm  stacktest.mxvm  strcmp.mxvm  string.mxvm  subadd.mxvm  subroutine.mxvm  subroutine_add.mxvm  substack.mxvm  testmain.mxvm  tictactoe.mxvm  tictactoe_ai.mxvm  tictactoe_obj.mxvm  tokenize.mxvm
mxvm_src/FileTokenizer/: FileTokenizer.mxvm
mxvm_src/SDL/MasterPiece/: MasterPiece.mxvm
mxvm_src/SDL/Tetris/: Blocks.mxvm  BlocksMod.mxvm  Makefile  tetris.mxvm
mxvm_src/SDL/breakout/: breakout.mxvm
mxvm_src/SDL/ex1/: sdl_app.mxvm
mxvm_src/SDL/image/: Game.mxvm  Image.mxvm  Text.mxvm
mxvm_src/SDL/key_events/: keypress.mxvm
mxvm_src/SDL/mouse_events/: clicks.mxvm
mxvm_src/SDL/piece/: puzzle.mxvm
mxvm_src/SDL/pixels/: Game.mxvm  Input.mxvm  RandomPixels.mxvm  SDLCore.mxvm
mxvm_src/SDL/pong/: pong.mxvm
mxvm_src/SDL/skeleton/: Game.mxvm  Input.mxvm  Main.mxvm  SDLCore.mxvm  Text.mxvm
mxvm_src/SDL/tictactoe/: tictactoe.mxvm
mxvm_src/comments/: Comments.mxvm  Makefile  ReadFile.mxvm
mxvm_src/ideas/: FileTokenizer.mxvm  Hello.mxvm  StringPrint.mxvm  add.mxvm  args.mxvm  bits.mxvm  comment.mxvm  fibonacci.mxvm  grep.mxvm  guess.mxvm  inf.mxvm  io.mxvm  logic.mxvm  loop.mxvm  loopbyx.mxvm  memtest.mxvm  print_cat.mxvm  print_hex.mxvm  recursion.mxvm  rps.mxvm  stack.mxvm  strcmp.mxvm  string.mxvm  subadd.mxvm  subroutine_add.mxvm  substack.mxvm  testcode.pl  testinv.mxvm  tictactoe.mxvm  tictactoe_ai.mxvm  tictactoe_mod.mxvm  tictactoe_obj.mxvm  tokenize.mxvm  write.mxvm
mxvm_src/print_hex/: HexFile.mxvm  Makefile  PrintHex.html  PrintHex.mxvm  debug_info.txt  print_hex.mxvm  test.mxvm
mxvm_src/string/: strfind.mxvm
scripts/: gen_pas_html.py
src/: ast.cpp  function.cpp  html_gen.cpp  icode.cpp  icode_exec.cpp  icode_gen.cpp  icode_gen_x64.cpp  icode_opt.cpp  instruct.cpp  mxvm.cpp  parser.cpp  valid.cpp
src/frontend/: CMakeLists.txt  ast.cpp  expr.cpp  icode.cpp  icode_imp.cpp  icode_visit.cpp  main.cpp  parser.cpp  validator.cpp  version_info.hpp
src/frontend/include/: ast.hpp  expr.hpp  icode.hpp  parser.hpp  types.hpp  validator.hpp
src/frontend/pas/: array.pas  arrtype.mxvm  arrtype.pas  break.pas  case.pas  caseof.pas  continue.pas  exit.pas  features_demo.pas  fib.pas  fibonacci.pas  float_stress.pas  for.pas  hello_sdl.pas  helloworld.pas  if.pas  negative.pas  nested.pas  new_features.pas  not.pas  output.mxvm  pointer_addr.pas  pointer_arith.pas  pointer_basic.pas  pointer_demo.pas  pointer_full.pas  pointer_loop.pas  pointer_swap.pas  pointer_typealias.pas  procedure.pas  random_colors.pas  random_pixels.pas  random_rect.pas  random_squares.pas  read.pas  real.pas  record.pas  recordarray.pas  repeat.pas  scopetest.pas  (+21 more)
src/frontend/pas/MasterPiece/: BlockTypes.pas  GameUI.pas  GridUnit.pas  Makefile  MasterPiece.pas  PieceUnit.pas
src/frontend/pas/PuzzleDrop/: BlockTypes.pas  GridUnit.pas  Makefile  PieceUnit.pas  PuzzleDrop.pas
src/frontend/pas/SDL/: hello_world.pas  random_colors.pas  random_pixels.pas  skeleton.pas
src/frontend/pas/Tetris/: Tetris.pas
src/frontend/pas/alien/: alien.mxvm  alien.pas
src/frontend/pas/asteroids/: asteroids.mxvm  asteroids.pas  ateroids.mxvm
src/frontend/pas/breakout/: breakout.mxvm  breakout.pas  eq.mxvm  eq.pas
src/frontend/pas/examples/: new_features_demo.pas
src/frontend/pas/intbuilder/: cardgame.pas
src/frontend/pas/knights_tour/: knight.pas
src/frontend/pas/logo/: display.mxvm  display.pas
src/frontend/pas/pong/: pong.mxvm  pong.pas
src/frontend/pas/shift/: space.mxvm  space.pas
src/frontend/pas/space/: space.mxvm  space.pas
src/frontend/pas/spaceshooter/: space.pas
src/frontend/pas/spaceshooter/data/: spacelogo.bmp.old
src/frontend/pas/testtypes/: dim_array.mxvm  dim_array.pas  test.mxvm  testarray.mxvm  testarray.pas
src/frontend/pas/text/: text.mxvm  text.pas
src/frontend/pas/type/: record.mxvm  record.pas
src/frontend/pas/unit/: DynArrayTest.pas  MathLib.pas  RecurseTest.pas  StringUtils.pas  UnitDemo.pas
src/frontend/src/: pascal_parser.cpp
src/html_gen/: CMakeLists.txt  html.cpp
src/scanner/: CMakeLists.txt  exception.cpp  scanner.cpp  string_buffer.cpp  types.cpp
src/scanner/include/scanner/: exception.hpp  expr.hpp  scanner.hpp  string_buffer.hpp  types.hpp
src/vm/: CMakeLists.txt  main.cpp
src/vm/include/: argz.hpp
src/webasm/: Makefile  mxvm.data  web.cpp
src/webasm/include/string/: string.mxvm
src/webasm/page/: index.html  mxvm.data  mxvm.js  mxvm.wasm
src/webasm/page/io/: io.mxvm
src/webasm/page/sdl/: sdl.mxvm
src/webasm/syntax/: Makefile  syntax.cpp
src/webasm/syntax/page/: index.html  mxvm-html.js  mxvm-html.wasm
tests/: CMakeLists.txt  codetest.cpp
